--- a/src/index.css
+++ b/src/index.css
@@ -11118,6 +11118,11 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+body {
+  margin: 0;
+  background: rgba(245, 231, 231, 0.507) linear-gradient(to right, #078efd, #07fde8);
+}
+
 #root {
   display: flex;
   justify-content: center;
@@ -11127,6 +11132,7 @@ textarea.form-control-lg {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: minmax(5rem, auto) repeat(6, auto);
   justify-content: center;
   width: 90%;
   margin-top: 2rem;
@@ -11137,15 +11143,19 @@ textarea.form-control-lg {
   background: #aad4f7;
 }
 #calculator #display {
+  display: flex;
+  flex-direction: column;
   grid-column: 1/-1;
-  text-align: right;
-  font-size: 4.5rem;
+  align-items: flex-end;
+  font-size: 3.5rem;
   max-width: 440px;
   overflow: hidden;
   border-radius: 1rem;
   border: 2px solid black;
   background: whitesmoke;
   padding-right: 0.5rem;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 #calculator #sub-display {
   grid-column: 1/span 4;
@@ -11156,21 +11166,14 @@ textarea.form-control-lg {
   height: 20px;
   font-weight: bold;
 }
-#calculator #clear {
-  grid-column: 1/span 1;
-}
-#calculator #zero {
-  grid-column: 1/span 2;
+#calculator #equals {
+  grid-column: span 2;
 }
 
 .btn {
   font-weight: bold;
   border-radius: 100vw;
-}
-
-body {
-  margin: 0;
-  background: linear-gradient(to right, #078efd, #07fde8);
+  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=index.css.map */
