converted code to use usereducer() hook

--- a/src/SCSS/index.scss
+++ b/src/SCSS/index.scss
@@ -15,7 +15,7 @@ body {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: minmax(5rem, auto) repeat(6, auto);
+  grid-template-rows: minmax(5rem, auto) minmax(1.25rem, auto) repeat(5, auto);
   justify-content: center;
 
   width: 90%;
@@ -43,15 +43,21 @@ body {
     word-break: break-all;
   }
   #sub-display {
-    grid-column: 1 / span 4;
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    grid-column: 1 / -1;
+    align-items: flex-end;
     font-size: 1rem;
     max-width: 440px;
     overflow: hidden;
-    height: 20px;
-    font-weight: bold;
-  }
 
+    font-weight: bold;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
+  #clear {
+    grid-column: span 2;
+  }
   #equals {
     grid-column: span 2;
   }
