--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -11129,10 +11130,11 @@ body {
 }
 
 #calculator {
+  font-family: "Share Tech Mono", monospace;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: minmax(5rem, auto) minmax(1.25rem, auto) repeat(5, auto);
+  grid-template-rows: minmax(5rem, auto) minmax(1.5rem, auto) repeat(5, auto);
   justify-content: center;
   width: 90%;
   margin-top: 2rem;
@@ -11165,6 +11167,7 @@ body {
   font-size: 1rem;
   max-width: 440px;
   overflow: hidden;
+  color: rgba(0, 0, 0, 0.527);
   font-weight: bold;
   word-wrap: break-word;
   word-break: break-all;
